AlcoBot v0.6.0 (not released):
  NEW: Added a "notify" callback to the FTP library (connection success).
  NEW: Expanded zipscript support to include iojZS (jeza) and php_psio (SnypeTEST).
  NEW: The "ftpd" module will indicate if the FTP connection succeeded or failed.
  FIX: Forgot to add the "UPDATE" log type to the "zipscript" event group.
  FIX: The default colours are used if there are no available section colours.

AlcoBot v0.5.0 (Oct 12, 2005):
  NEW: Add, fill, or remove requests from IRC with the !request, !reqfill, and !reqdel commands.
  NEW: Added command aliases !dn and !up for !leechers and !uploaders, respectively.
  NEW: Approve releases from IRC with the !approve command.
  NEW: Asynchronous FTP client library with SSL and TLS support.
  NEW: Expanded zipscript support to include ioSFV (_tUFF) and Project-ZS (Caladan/esmandil).
  NEW: File containing all available variables (variables.txt).
  NEW: List commands on the configuration dump, ".alcobot dump".
  NEW: Rewrote the command interface, proper support for aliases and flag checking.
  NEW: The "ftpd" module now maintains a connection to the FTP server.
  CHG: Removed the "cmdPrefix" option from [Module::Free].
  CHG: Removed the pre time announces from nxTools.
  CHG: The option names in [Commands] are the base names of commands instead of a pattern.
  FIX: Handling of patterns with reserved characters (!dupe, !new, !nukes, !unnukes, !pre).
  FIX: ioZS support, the escape sequences are now properly substituted.
  FIX: Parsing sub-list (loop) values with reserved characters.

AlcoBot v0.4.0 (Oct 7, 2005):
  NEW: Online stats module, to view bandwidth usage and user activity.
  NEW: Support for alternative user/group stores (e.g. ioShareDb). Access
       to ioFTPD's user and group files is now done using shared memory.
  NEW: Tcl version check, to ensure Tcl v8.4, or newer, is present.
  CHG: The ioFTPD directory is now found automatically using the message window,