@@ -22,9 +22,9 @@ cmdPrefix = !alc
 siteName  = Alcoholicz
 siteTag   = ALC
 
-debugMode = True
+debugMode = False
 ftpDaemon = ioftpd
-modules   = ftpd free groups help invite nxtools online pretimes readlogs
+modules   = bouncer ftpd free groups help invite nxtools online pretimes readlogs
 varFiles  = core.vars ioftpd.vars nxautonuke.vars nxtools.vars
 themeFile = default-io.theme
 
@@ -69,6 +69,9 @@ secure     = tls
 # - The first match wins, so order your flags accordingly.
 #
 [Commands]
+# Bouncer module.
+bnc      = +target=notice
+
 # Groups module.
 affils   = +target=notice
 banned   = +target=notice
@@ -147,6 +150,22 @@ SVCD    = "/SVCD/"  "#Alc"     "-wipe +all"
 TV      = "/TV/"    "#Alc"     "-wipe +all"
 VCD     = "/VCD/"   "#Alc"     "-wipe +all"
 XVID    = "/XVID/"  "#Alc"     "-wipe +all"
+
+#### Module: Bouncer
+#
+# Name: bouncer
+# Info: Display bouncer status.
+# Path: modules/generic/bouncer
+#
+# cmdPrefix  - Command prefix for commands specific to this module. The
+#              default prefix will be used if this option is undefined.
+#
+# Format: <name> = <host> <port> <user> <password> [secure]
+#
+[Module::Bouncer]
+cmdPrefix = !
+Canada    = bnc.host.ca 21 bncuser bncpass tls
+Sweden    = bnc.host.se 21 bncuser bncpass ssl
 
 #### Module: Free
 #
