@@ -1,0 +1,22 @@
+#
+# AlcoBot - Alcoholicz site bot.
+# Copyright (c) 2005 Alcoholicz Scripting Team
+#
+# Module Name:
+#   Bouncer Module Variables
+#
+# Author:
+#   neoxed (neoxed@gmail.com) Oct 15, 2005
+#
+# Abstract:
+#   Variable definitions for the bouncer module.
+#
+
+[Events]
+
+[Replace]
+
+[Variables]
+bouncerHead =
+bouncerDown = name:z host:z port:n
+bouncerUp   = name:z host:z port:n
